--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -15,7 +15,7 @@
                 <div class="card-body">
                     <a href="/usuarios/nuevo" class="btn btn-success mb-3">Crear nuevo usuario</a>
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-borderless datatable table-hover">
                             <thead class="thead-dark">
                                 <tr>
                                     <th>Nombre</th>
