--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,29 +2,31 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="Descripción de la página">
+        <meta name="author" content="Nombre del autor">
+        <meta name="keywords" content="Palabras clave relevantes separadas por comas">
+        <meta name="robots" content="index, follow">
+        <meta property="og:image" content="URL de la imagen para la vista previa de redes sociales">
         <title>Login</title>
-        <!-- Agregamos los estilos de Bootstrap -->
+        <!-- Estilos -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
               crossorigin="anonymous">
     </head>
     <body>
-
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <h1 class="text-center mb-4">Login</h1>
-                    <!-- Agregamos el formulario de login -->
+                    <!-- Formulario de login -->
                     <form action="#" th:action="@{/login}" th:object="${usuario}" method="post">
                         <div class="form-group">
                             <label for="correo">Correo electrónico:</label>
-                            <input type="email" class="form-control" id="correo" name="correo"
-                                   th:field="*{correo}" required>
+                            <input type="email" class="form-control" id="correo" name="correo" th:field="*{correo}" required>
                         </div>
                         <div class="form-group">
                             <label for="contrasenia">Contraseña:</label>
-                            <input type="password" class="form-control" id="contrasenia" name="contrasenia"
-                                   th:field="*{contrasenia}" required>
+                            <input type="password" class="form-control" id="contrasenia" name="contrasenia" th:field="*{contrasenia}" required>
                         </div>
                         <div th:if="${loginError}" class="alert alert-danger">
                             <p>¡Oops! La contraseña ingresada es incorrecta. Por favor, inténtalo de nuevo.</p>
@@ -35,16 +37,15 @@
             </div>
         </div>
 
-        <!-- Agregamos los scripts de Bootstrap -->
+        <!-- Scripts -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6a
+        /opgLr/+7NM9SWn7w2WSDIhRt" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
                 integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
     </body>
 </html>
