--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -63,7 +63,6 @@
                         <div class="btn-group mr-2" role="group">
                             <a th:href="@{/usuarios/nuevo}" class="btn btn-success">Crear nuevo usuario</a>
                         </div>
-                        <p>Usuario ID: [[${usuarioID}]]</p>
                     </div>
                     <!-- Lista de usuarios -->
                     <div class="row">
@@ -79,30 +78,11 @@
                                     <div class="card-footer">
                                         <div class="btn-toolbar" role="toolbar">
                                             <div class="btn-group mr-2" role="group">
-                                                <a th:href="@{/usuarios/editar/{usuarioID}(usuarioID=*{usuarioID})}" class="btn btn-primary">Editar</a>
+                                                <a  th:href="@{/usuarios/editar/{usuarioID}(usuarioID=*{usuarioID})}" class="btn btn-primary">Editar</a>
                                             </div>
-                                            <div class="btn-group" role="group">
-                                                <a class="btn btn-danger " data-toggle="modal" data-target="#confirmarEliminacion">Eliminar</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Modal de confirmación de eliminación -->
-                                    <div class="modal fade" id="confirmarEliminacion" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="modalLabel">Confirmar eliminación</h5>
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    ¿Está seguro de que desea eliminar al usuario?
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                                                    <a th:href="@{/usuarios/eliminar/{usuarioID}(usuarioID=*{usuarioID})}"  class="btn btn-danger">Eliminar</a>
-                                                </div>
+                                            <div class="btn-group mr-2" role="group">
+                                                <a th:href="@{/usuarios/eliminar/{usuarioID}(usuarioID=*{usuarioID})}" class="btn btn-danger" 
+                                                   onclick="return confirm('¿Está seguro de que desea eliminar al usuario?');">Eliminar</a>
                                             </div>
                                         </div>
                                     </div>
